--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Document</title>
-</head>
-<body>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo similique voluptatum eveniet vitae eum reiciendis vero eligendi laboriosam, facilis dolores architecto atque repellendus repudiandae praesentium temporibus quis maxime nihil quas.</p>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <!-- <div class="img">
+        <img src="src/girl.jpg" alt="indian girl with colors" />
+      </div> -->
+      <div class="date">
+        <p>15 Aug</p>
+      </div>
+      <div class="photo">
+        <p>Photos</p>
+      </div>
+      <div class="text">
+        <p>India</p>
+        <p class="hiddentext">An upcoming superpower</p>
+        <p class="hiddentext">
+          India is a vast South Asian country with diverse terrain - from
+          Himalayan peaks to indian Ocean coastline - and history reaching back
+          5 millennia.
+        </p>
+        <div class="bottom">
+          <p>6 mins ago</p>
+          <p>39 comments</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
