essais transition propre

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Photos</p>
       </div>
       <div class="text">
-        <p>India</p>
+        <h1>India</h1>
         <p class="hiddentext">An upcoming superpower</p>
         <p class="hiddentext">
           India is a vast South Asian country with diverse terrain - from
