--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
       </div>
       <div class="text">
         <h1>India</h1>
-        <p class="hiddentext">An upcoming superpower</p>
-        <p class="hiddentext">
-          India is a vast South Asian country with diverse terrain - from
-          Himalayan peaks to indian Ocean coastline - and history reaching back
-          5 millennia.
-        </p>
+        <p class="title">An upcoming superpower</p>
+        <div class="hiddentext">
+          <p>
+            India is a vast South Asian country with diverse terrain - from
+            Himalayan peaks to indian Ocean coastline - and history reaching back
+            5 millennia.
+          </p>
+        </div>
+       
         <div class="bottom">
           <p>6 mins ago</p>
           <p>39 comments</p>
