--- a/index.html
+++ b/index.html
@@ -9,31 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="img">
-        <img src="src/girl.jpg" alt="indian girl with colors" />
-      </div> -->
-      <div class="date">
-        <p>15 Aug</p>
-      </div>
-      <div class="photo">
-        <p>Photos</p>
-      </div>
-      <div class="text">
-        <h1>India</h1>
-        <p class="title">An upcoming superpower</p>
-        <div class="hiddentext">
-          <p>
-            India is a vast South Asian country with diverse terrain - from
-            Himalayan peaks to indian Ocean coastline - and history reaching back
-            5 millennia.
-          </p>
-        </div>
-       
-        <div class="bottom">
-          <p>6 mins ago</p>
-          <p>39 comments</p>
-        </div>
-      </div>
+        <section class="">
+
+        </section>
+        <section class="article">
+
+        </section>
     </div>
   </body>
 </html>
