--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <link rel="stylesheet" href="assets/style.css" />
     <title>Document</title>
   </head>
+
   <body>
     <div class="container">
-        <section class="">
+      <section class="fond">
+        <div class="date">
+          15 <br />
+          Aug
+        </div>
+      </section>
 
-        </section>
-        <section class="article">
-
-        </section>
+      <section class="article">
+        <div class="photo">
+          <p>Photos</p>
+        </div>
+        <span class="titre">India</span> 
+       <span class="soustitre">An upcoming superpower</span>
+        <p class="hidden">
+          India is a vast South Asian country with diverse terrain - from
+          Himalayan peaks to Indian Ocean coastline - and history reaching back
+          5 millennia.
+        </p>
+        <div class="comment">
+          <p>6 mins ago 39 comments</p>
+        </div>
+      </section>
     </div>
+
+    <p>Balise test</p>
   </body>
 </html>
